--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "desafio-4-1-header",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+   "name": "desafio-4-1-header",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "start": "npm-run-all -p nodemon browsersync",
+      "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, views'",
+      "nodemon": "nodemon server.js"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "express": "^4.17.3",
+      "nunjucks": "^3.2.3"
+   },
+   "devDependencies": {
+      "browser-sync": "^2.27.7",
+      "nodemon": "^2.0.15",
+      "npm-run-all": "^4.1.5"
+   }
 }
