--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
    "license": "ISC",
    "dependencies": {
       "express": "^4.17.3",
+      "method-override": "^3.0.0",
       "nunjucks": "^3.2.3"
    },
    "devDependencies": {
       "browser-sync": "^2.27.7",
       "nodemon": "^2.0.15",
-      "npm-run-all": "^4.1.5"
+      "npm-run-all": "^4.1.5",
+      "prettier": "2.5.1"
    }
 }
