--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "desafio-4-Aulas-Particulares",
+  "name": "desafio-4-aulas-particulares",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "npm-run-all -p nodemon browsersync",
-    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, views'",
-    "nodemon": "nodemon server.js"
+    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, src/app/views'",
+    "nodemon": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "method-override": "^3.0.0",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "browser-sync": "^2.27.7",
